Added ability to view API key and fixed UI bugs

--- a/repositoryUserInterface/app/views/Application/assocguardrule.html
+++ b/repositoryUserInterface/app/views/Application/assocguardrule.html
@@ -59,6 +59,18 @@ lang="en">
 				$("#logout").click(function() {
 					window.location = temp + URL_LOGOUT_USER;
 				});
+
+				var getsecretkey = {};
+
+				$.get(temp + URL_GET_SECRET_KEY, function(rData) {
+
+			    		getsecretkey = rData;
+			    		
+			    });
+
+				$("#viewkey").click(function() {
+			    		alert("Your API Key is " + getsecretkey['secretkey']);
+			    });
 					/*
 					 * Setting the AJAX to work in sycnhronous fashion
 					 */
@@ -646,8 +658,9 @@ lang="en">
 				</nav>
 				
 				<nav>
-					<p class="pbox" style="margin-bottom:-20px;">
-						Welcome ${username} &nbsp | &nbsp<span id="logout">Logout</span>
+					<p class="pbox" style="margin-bottom:-20px;"> Welcome ${username} &nbsp | &nbsp
+						<span id="viewkey">View API key</span> &nbsp; | 
+						&nbsp<span id="logout">Logout</span>
 					</p>
 				</nav>
 			</header>
